--- a/templates/includes/toasts/toast_error.html
+++ b/templates/includes/toasts/toast_error.html
@@ -3,8 +3,7 @@
     <div class="w-100 toast-capper bg-danger"></div>
     <div class="toast-header bg-white text-dark">
         <strong class="mr-auto">Error!</strong>
-        <button type="button" class="ml-2 mb-1 close text-dark" data-dismiss="toast" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
+        <button type="button" class="ml-2 mb-1 btn-close text-dark" data-bs-dismiss="toast" aria-label="Close">
         </button>
     </div>
     <div class="toast-body bg-white">
