--- a/templates/base.html
+++ b/templates/base.html
@@ -101,9 +101,9 @@
                                 <div><i class="fas fa-heart"></i></div>
                                 <p class="my-0">
                                     {% if grand_total %}
-                                        Favourites1 ${{ grand_total|floatformat:2 }}
+                                        Favourites ${{ grand_total|floatformat:2 }}
                                     {% else %}
-                                        Favourites1 (0)
+                                        Favourites (0)
                                     {% endif %}
                                 </p>
                             </div>
@@ -187,7 +187,7 @@
     <div class="container pt-5">
       <div class="row">
         <!-- Logo and social media links -->
-        <div class="col-lg-4 col-md-12 mb-4 mb-lg-0"><img src="{{ MEDIA_URL }}logo/logo.png" alt="website logo" class="mb-3 logo">
+        <div class="col-lg-4 col-md-12 mb-4 mb-lg-0"><img src="{{ MEDIA_URL }}logo/logo_grey.png" alt="website logo" class="mb-3 logo">
           <p class="">Love Rugby is an online rugby shop selling boots, jerseys and accessories</p>
           <ul class="list-inline mt-4">
             <li class="list-inline-item"><a href="http://www.twitter.com" target="_blank" rel="noreferrer" aria-label="Go to our twitter page (opens in new tab)" title="twitter"><i class="dark-green fa fa-twitter"></i></a></li>
