feat: Info, warning, error css class updates

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -108,10 +108,10 @@
                             </div>
                         {% else %}
                             <p class="lead mb-5">Your bag is empty.</p>
-                            <!--<a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
+                            <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
                                <span class="icon">
                                     <i class="fas fa-chevron-left"></i>
-                                </span> -->
+                                </span>
                                 <a href="{% url 'products' %}"class="text-uppercase">Keep Shopping</span>
                             </a>
                         {% endif %}
@@ -122,6 +122,7 @@
     </div>
 </div>
 {% endblock %}
+
 
 {% block postloadjs %}
 {{ block.super }}
