--- a/bag/templates/bag/checkout-buttons.html
+++ b/bag/templates/bag/checkout-buttons.html
@@ -1,12 +1,6 @@
 <a href="{% url 'products' %}" class="btn black-btn">Keep Shopping</a>
-    <!--<span class="icon">
-        <i class="fas fa-chevron-left"></i>
-    </span>
-    <span class="text-uppercase">Keep Shopping</span> -->
 </a>
-<a href="{% url 'checkout' %}" class="btn green-btn">Secure Checkout</a>
-    <!--<span class="text-uppercase">Secure Checkout</span>
-    <span class="icon">
+<a href="{% url 'checkout' %}" class="btn green-btn">Secure Checkout     <span class="icon">
         <i class="fas fa-lock"></i>
-    </span> -->
+    </span></a>
 </a> 
